syntax = "proto3";
option go_package = "./";

import "google/protobuf/timestamp.proto";

// Commands:
// protoc -I=. --go_out=. ./task.proto
// protoc -I=. --go-grpc_out=. ./task.proto


service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
    rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
}

enum TaskStatus {
  TASK_STATUS_UNSPECIFIED = 0;
  TASK_STATUS_CREATED = 1;
  TASK_STATUS_IN_PROGRESS = 2;
  TASK_STATUS_COMPLETED = 3;
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    TaskStatus status = 4;
    string userId = 5;
    google.protobuf.Timestamp due_date = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreateTaskRequest {
    Task item = 1;
}

message CreateTaskResponse {
    string id = 1;
}

message GetTaskRequest {
    string id = 1;
}

message GetTaskResponse {
    Task item = 1;
}

message ListTasksRequest {
    int32 limit = 1;
    int32 offset = 2;
    bool pending = 3;
}

message ListTasksResponse {
    repeated Task items = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message DeleteTaskResponse {}

message UpdateTaskRequest {
    Task item = 1;
}

message UpdateTaskResponse {}
